@@ -117,6 +117,11 @@
       <version>3.10.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -133,6 +138,13 @@
         <configuration>
           <testFramework>JUNIT5</testFramework>
           <baseClassForTests>com.example.hello.persona.contract.BaseContractTest</baseClassForTests>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
       </plugin>
       <plugin>
